static/styles/styles.css
/* ... */
.sidebar__chatbox {
  height: 48px;
  color: #ffffff;
}

.sidebar__chat-input {
  float: left;
  width: calc(100% - 57px);
  height: 100%;
  padding: 0 25px;
  background-color: #0B1A1D;
  border: none;
  color: #ffffff;
}

.sidebar__chatbox .button--chat {
  float: right;
  width: 57px;
  height: 100%;
}

.sidebar__chat-message {
  margin-bottom: 10px;
}

.sidebar__chat-name {
  font-family: "Pirata One", cursive;
  text-transform: uppercase;
}

@media (max-width: 56.25em) {
  .sidebar {
    height: 300px;
  }
}
.turn-choice {
  border: none;
}

.turn-choice__btn {
  float: left;
  font-family: inherit;
  font-size: 20px;
  height: 92px;
  width: calc(50% - 1px);
  padding: 10px 14px;
  border: none;
  background-color: #ffbc00;
  color: #000000;
}

.turn-choice__btn--item {
  float: none;
  height: 45px;
  width: 100%;
  margin-top: 2px;
}

.turn-choice__btn:first-child {
  margin-right: 2px;
}

.turn-choice__btn:hover {
  cursor: pointer;
}

.turn-choice__btn:disabled,
.turn-choice:disabled .turn-choice__btn {
  opacity: 0.25;
  color: #000000;
}

.turn-choice:disabled .turn-choice__btn:hover {
  cursor: default;
}

@media (max-width: 37.5em) {
  .turn-choice__btn {
    height: 60px;
  }
}
.action-box {
  position: relative;
  width: 500px;
  font-family: "Pirata One", cursive;
}

.action-box__msg-box {
  float: left;
  position: relative;
  height: 100%;
  width: 50%;
  padding: 20px 25px;
  margin-bottom: 20px;
  background-color: #071E22;
  min-height: 140px;
}

.action-box__msg-box--buttons {
  padding: 0;
  background-color: transparent;
}

.action-box__msg-box--roll {
  text-align: center;
  font-size: 18px;
}

.action-box__die {
  margin-top: 6px;
}

@media (max-width: 37.5em) {
  .action-box {
    width: 100%;
  }

  .action-box__msg-box {
    width: 100%;
    min-height: auto;
    margin-bottom: 10px;
  }

  .action-box__msg-box:not(:last-child) {
    margin-right: 0;
  }

  .action-box__msg-box--roll {
    min-height: 126px;
  }

  .js-action-box-text--roll {
    font-size: 12.8px;
  }
}
.modal {
  display: none;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: #071E22;
  width: 960px;
  max-width: 90%;
  height: 400px;
  max-height: 90%;
  z-index: 100;
}

.modal--rules {
  height: auto;
  overflow: hidden;
}

.modal--small {
  width: auto;
  height: auto;
}

.body--modal-open .modal--active,
.body--modal-open .modal__overlay {
  display: block;
}

.body--modal-open .js-open-rules-modal-btn {
  display: none;
}

body.body--modal-open {
  overflow: hidden;
}

.modal__inner {
  padding: 30px 50px;
  padding-right: 87px;
}

.modal__inner--slider {
  padding: 0;
}

.modal__heading {
  margin-bottom: 20px;
}

.modal__overlay {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 50;
  background: rgba(0, 0, 0, 0.6);
}

.modal__close-btn {
  position: absolute;
  cursor: pointer;
  top: 30px;
  right: 30px;
  padding: 0;
  background-color: transparent;
  border: none;
  background-color: rgba(0, 0, 0, 0.6);
  padding: 10px;
  z-index: 1;
}

.modal__close-btn svg {
  display: block;
  fill: #ffbc00;
  width: 25px;
  height: 25px;
}

@media (max-width: 56.25em) {
  .modal {
    height: auto;
    width: 100%;
  }

  .modal__inner {
    padding: 30px;
  }

  .modal__inner--slider {
    padding: 0;
  }

  .modal__close-btn {
    top: 0;
    right: 0;
  }
}
.button {
  font-family: "Poppins", sans-serif;
  background-color: #ffbc00;
  font-weight: 600;
  color: #002642;
  display: inline-block;
  padding: 10px 15px;
  font-size: 20px;
  border-radius: 0;
  -webkit-appearance: none;
  border: 1px solid transparent;
  min-height: 45px;
  text-align: center;
}

.button:hover {
  background-color: #ffc933;
  transition: 0.2s ease-out;
}

.button--pirata {
  font-family: "Pirata One", cursive;
  font-weight: 300;
}

.button--refresh {
  background-image: url(../images/refresh.svg);
  background-repeat: no-repeat;
  background-position: center;
  background-color: #002642;
  padding: 10px 25px;
  height: 52px;
}

.button--sidebar {
  float: left;
  position: relative;
  background-color: #071E22;
  font-family: "Pirata One", cursive;
  font-weight: 300;
  color: #ffffff;
  font-size: 20px;
  padding: 3px 25px;
  min-width: 114px;
  opacity: 0.65;
  text-align: left;
}

.button--refresh:hover,
.button--sidebar:hover {
  background-color: #10434c;
  transition: 0.2s ease-out;
}

.button--chat {
  padding: 6px;
  height: 48px;
  font-size: 20px;
  color: #000000;
  font-family: "Pirata One", cursive;
  font-weight: 300;
}

.button--sidebar-active {
  opacity: 1;
}

.buttons-row .button {
  float: left;
}

.buttons-row .button:not(:last-child) {
  margin-right: 20px;
}

.button:hover {
  cursor: pointer;
}

.rules-button {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  position: fixed;
  bottom: 30px;
  left: 30px;
  padding: 12px 18px;
  z-index: 100;
  background: #071E22;
  color: #ffffff;
  border: none;
  cursor: pointer;
  box-shadow: 2px 2px 8px 0px black;
}

.notice {
  margin-top: 15px;
  padding: 20px 30px;
  border: 1px solid #e8d600;
  background: #443400;
  margin-bottom: 26px;
}

.notice--error {
  border: 1px solid #e80000;
  background: #1a0000;
}

.room-list {
  margin-top: 20px;
  margin-bottom: 20px;
}

.room-list table {
  width: 100%;
  text-align: left;
  border-collapse: collapse;
}

.room-list thead {
  border-bottom: 1px solid #6a6a6a;
  font-weight: 600;
}

.room-list a {
  color: #ffffff;
  text-decoration: none;
}

.room-list th,
.room-list td {
  padding-top: 4px;
  padding-bottom: 4px;
}

.scoreboard {
  min-height: 140px;
  font-family: "Pirata One", cursive;
  margin-bottom: 20px;
}

.scoreboard--active-player .js-scoreboard-player {
  animation-duration: 1.5s;
  animation-name: pulseGreen;
  animation-iteration-count: infinite;
}
/* ... */

